force-app/main/default/objects/Account/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>Overall balance of the account.</description>
    <formula>(Total_Income__c +  Total_Transfers_In__c) - (Total_Expenses__c + Total_Transfers_Out__c + Total_Card_Charges__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>