force-app/main/default/objects/Account/fields/Balancing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balancing_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount to offset calculations by for the balance total due to omitted or previously removed transfer, expense, or income records.(i.e. initial balance, balance after removing old records to clear up storage, etc.)</description>
    <label>Balancing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>