force-app/main/default/objects/Account/fields/Total_Card_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Card_Charges__c</fullName>
    <description>Total paid off charges to credit cards from the account.</description>
    <label>Total Card Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>