force-app/main/default/objects/Account/fields/Total_Charges_Stricken__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges_Stricken__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total amount of charges to the credit card that were stricken for a fraudulent or challenged charge.</description>
    <label>Total Charges Stricken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>