force-app/main/default/objects/Account/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <label>Total Income</label>
    <summarizedField>Income__c.Amount__c</summarizedField>
    <summaryForeignKey>Income__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>