force-app/main/default/objects/Account/fields/Total_Transfers_In__c.field-meta.xml
<CustomField>
    <fullName>Total_Transfers_In__c</fullName>
    <label>Total Transfers In</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>