force-app/main/default/objects/Account/fields/Total_Transfers_Out__c.field-meta.xml
<CustomField>
    <fullName>Total_Transfers_Out__c</fullName>
    <label>Total Transfers Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>