force-app/main/default/objects/Account/recordTypes/Credit_Card.recordType-meta.xml
<RecordType>
    <fullName>Credit_Card</fullName>
    <active>true</active>
    <description>Account that represents a credit card.</description>
    <label>Credit Card</label>
</RecordType>