force-app/main/default/objects/Account/recordTypes/General_Equity.recordType-meta.xml
<RecordType>
    <fullName>General_Equity</fullName>
    <active>true</active>
    <label>General Equity</label>
</RecordType>