force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Balance__c</columns>
    <columns>Balancing_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>