force-app/main/default/objects/Account/listViews/Home_Page_View.listView-meta.xml
<ListView>
    <fullName>Home_Page_View</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Balance__c</columns>
    <filterScope>Mine</filterScope>
    <label>Home Page View</label>
</ListView>